--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
         <script src="scripts/033d4e31.components.js"></script>
 
-        <script src="//api.nitrogen.io/client/nitrogen.js"></script>
+        <script src="//localhost:3030/client/nitrogen.js"></script>
 
-        <script src="scripts/46f9da19.templates.js"></script>
+        <script src="scripts/f096b48c.templates.js"></script>
 
-        <script src="scripts/da69aaaa.main.js"></script>
+        <script src="scripts/e66523d8.main.js"></script>
 
         <script src="scripts/76c21dca.plugins.js"></script>
 
