--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
         <script src="scripts/fe8b30d5.components.js"></script>
 
-        <script src="//api.nitrogen.io/client/nitrogen.js"></script>
+        <script src="//localhost:3030/client/nitrogen.js"></script>
 
-        <script src="scripts/a8058808.templates.js"></script>
+        <script src="scripts/66497b27.templates.js"></script>
 
-        <script src="scripts/8f8dba59.main.js"></script>
+        <script src="scripts/12f0ace8.main.js"></script>
 
         <script src="scripts/76c21dca.plugins.js"></script>
 
