--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <script src="scripts/fe8b30d5.components.js"></script>
 
-        <script src="//localhost:3030/client/nitrogen.js"></script>
+        <script src="//api.nitrogen.io/client/nitrogen.js"></script>
 
         <script src="scripts/66497b27.templates.js"></script>
 
