--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
         <script src="scripts/4c0589de.components.js"></script>
 
-        <script src="//localhost:3030/client/nitrogen.js"></script>
+        <script src="//api.nitrogen.io/client/nitrogen.js"></script>
 
         <script src="scripts/03abf84d.templates.js"></script>
 
-        <script src="scripts/4ca3ea60.main.js"></script>
+        <script src="scripts/fbb4b389.main.js"></script>
 
         <script src="scripts/e825ec3a.plugins.js"></script>
 
