--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
         <script src="scripts/4c0589de.components.js"></script>
 
-        <script src="//api.nitrogen.io/client/nitrogen.js"></script>
+        <script src="//n2-fe.azurewebsites.net/client/nitrogen.js"></script>
 
         <script src="scripts/03fa3c93.templates.js"></script>
 
-        <script src="scripts/0fd23ee0.main.js"></script>
+        <script src="scripts/733dece2.main.js"></script>
 
         <script src="scripts/e825ec3a.plugins.js"></script>
 
