--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <script src="scripts/4c0589de.components.js"></script>
 
-        <script src="//n2-fe.azurewebsites.net/client/nitrogen.js"></script>
+        <script src="//nitrogen-api-staging.azurewebsites.net/client/nitrogen.js"></script>
 
         <script src="scripts/03fa3c93.templates.js"></script>
 
