--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="styles/26b10ebd.main.css">
+        <link rel="stylesheet" href="styles/a22eef3e.main.css">
     </head>
     <body>
         <!-- Ember application entry point -->
         <section id="app"></section>
 
-        <script src="scripts/4c0589de.components.js"></script>
+        <script src="scripts/bfdf030c.components.js"></script>
 
-        <script src="//nitrogen-api-staging.azurewebsites.net/client/nitrogen.js"></script>
+        <script src="//api.nitrogen.io/client/nitrogen.js"></script>
 
         <script src="scripts/03fa3c93.templates.js"></script>
 
-        <script src="scripts/733dece2.main.js"></script>
+        <script src="scripts/fab04c5d.main.js"></script>
 
-        <script src="scripts/e825ec3a.plugins.js"></script>
+        <script src="scripts/c9702127.plugins.js"></script>
 
     </body>
 </html>
