push revamped admin

--- a/index.html
+++ b/index.html
@@ -8,19 +8,18 @@
 
         <link rel="stylesheet" href="styles/a22eef3e.main.css">
     </head>
-    <body>
+    <body class="page-header-fixed page-full-width">
         <!-- Ember application entry point -->
-        <section id="app"></section>
+        <div id="app"></div>
 
-        <script src="scripts/bfdf030c.components.js"></script>
+        <script src="scripts/0f605a6e.components.js"></script>
 
         <script src="//api.nitrogen.io/client/nitrogen.js"></script>
 
-        <script src="scripts/e917bec5.templates.js"></script>
+        <script src="scripts/8c045ba2.templates.js"></script>
 
-        <script src="scripts/8520cf43.main.js"></script>
+        <script src="scripts/d004aae3.main.js"></script>
 
-        <script src="scripts/c9702127.plugins.js"></script>
-
+        <script src="scripts/3b3660cd.plugins.js"></script>
     </body>
 </html>
