--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="styles/a22eef3e.main.css">
+        <link rel="stylesheet" href="styles/3677b03e.main.css">
     </head>
     <body class="page-header-fixed page-full-width">
         <!-- Ember application entry point -->
@@ -14,11 +14,11 @@
 
         <script src="scripts/0f605a6e.components.js"></script>
 
-        <script src="//api.nitrogen.io/client/nitrogen.js"></script>
+        <script src="http://localhost:3030/client/nitrogen.js"></script>
 
         <script src="scripts/8c045ba2.templates.js"></script>
 
-        <script src="scripts/d004aae3.main.js"></script>
+        <script src="scripts/c5a6696a.main.js"></script>
 
         <script src="scripts/3b3660cd.plugins.js"></script>
     </body>
