--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
         <script src="scripts/0f605a6e.components.js"></script>
 
-        <script src="http://localhost:3030/client/nitrogen.js"></script>
+        <script src="//api.nitrogen.io/client/nitrogen.js"></script>
 
-        <script src="scripts/8c045ba2.templates.js"></script>
+        <script src="scripts/04e16dfb.templates.js"></script>
 
-        <script src="scripts/c5a6696a.main.js"></script>
+        <script src="scripts/48e365d6.main.js"></script>
 
         <script src="scripts/3b3660cd.plugins.js"></script>
     </body>
