--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
         <script src="scripts/0f605a6e.components.js"></script>
 
-        <script src="//api.nitrogen.io/client/nitrogen.js"></script>
+        <script src="//localhost:3030/client/nitrogen.js"></script>
 
-        <script src="scripts/2cfe7ada.templates.js"></script>
+        <script src="scripts/13103ed2.templates.js"></script>
 
-        <script src="scripts/a83ce162.main.js"></script>
+        <script src="scripts/12fa018e.main.js"></script>
 
         <script src="scripts/3b3660cd.plugins.js"></script>
     </body>
