--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <script src="scripts/b9f63b37.components.js"></script>
 
-        <script src="//api.nitrogen.io/client/nitrogen.js"></script>
+        <script src="//api.nitrogen.io/client/nitrogen-min.js"></script>
 
         <script src="scripts/6c2c3f82.templates.js"></script>
 
