--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
         <script src="scripts/c0f7fe17.components.js"></script>
 
-        <script src="//api.nitrogen.io/client/nitrogen-min.js"></script>
+        <script src="//localhost:3030/client/nitrogen-min.js"></script>
 
         <script src="scripts/cc1b9e30.templates.js"></script>
 
-        <script src="scripts/cf717484.main.js"></script>
+        <script src="scripts/e312bbc1.main.js"></script>
 
         <script src="scripts/3b3660cd.plugins.js"></script>
     </body>
